--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,24 @@
 body{
     background-color: bisque;
     padding: 20px;
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
     
+}
+.tarjeta{
+    margin: 30px;
+    background-color: orange;
+    border-radius: 25px;
+    padding: 10px;
+    width: 350px;
+    height: auto;
+    box-shadow: 2px 5px 10px 10px rgba(0, 0, 0, 0.2);
+}
+.tarjeta>h1,h2{
+    color: blue;
+}
+.tarjeta>h1{
+    font-weight: bold;
+    font-size: 20px;
 }
